# crypto-analysis-project

./: .gitignore  README.md  mkdocs.yml
dbt_transform/: .dockerignore  (+3 more)
local_scripts/: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
local_scripts/batch/: binance_trade_collector.py  data_validator.py  data_validator_legacy.py  deribit_options_collector.py  exchange_reserves_collector.py  funding_basis_collector.py  gx_mart_quality_audit.py  iceberg_loader.py  liquidation_heatmap.py  manage_catalog.py  pipeline_health_check.py  reddit_sentiment.py  save_dataframe_to_parquet.py  send_slack_health_alert.py  stablecoin_supply_collector.py  telegram_sentiment.py  tiingo_extractor.py
local_scripts/batch/alerting/: cli.py  health_alert_service.py  settings.py  slack_client.py
local_scripts/batch/alpha_vantage_option/: etf_flows_collector.py  macro_extractor.py
local_scripts/batch/backfill/: binance_backfill_funding_to_int.py  binance_backfill_raw_trades_to_hourly_int_daily_window.py  coingecko_backfill_exchange_reserve_to_int.py  load_int_funding_hourly_to_bigquery.py  load_int_market_trades_hourly_to_bigquery.py  load_tiingo_int_daily_to_bigquery.py  tiingo_backfill_macro_etf_to_int.py
local_scripts/batch/common/: bq_io.py
local_scripts/batch/monitoring/: bq_client.py  checks.py  cli.py  health_service.py  settings.py
local_scripts/batch/quality_audit/: audit_service.py  bq_client.py  cli.py  gx_runner.py  settings.py
local_scripts/batch/validation/: engine.py  io.py  rules.py
local_scripts/streaming/: Makefile  docker-compose.yaml
(+248 files in other folders)
