[project]
name = "local-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alpha-vantage>=3.0.0",
    "fastparquet>=2026.3.0",
    "gcsfs>=2026.5.0",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-storage>=3.10.1",
    "great-expectations>=1.17.2",
    "kafka-python-ng>=2.2.3",
    "langdetect>=1.0.9",
    "nltk>=3.9.4",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "pyarrow>=24.0.0",
    "pyiceberg[gcs,pyarrow]>=0.11.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "requests-cache>=1.3.2",
    "sqlalchemy>=2.0.49",
    "telethon>=1.43.2",
    "web3>=7.16.0",
    "websocket-client>=1.9.0",
    "yfinance==0.2.54",
]

[tool.uv.workspace]
members = [
    "dbt_transform",
]
